2009-12-15  Jason Merrill  <jason@redhat.com>

	PR c++/42358
	* g++.dg/cpp0x/variadic98.C: New.

2009-12-14  Jason Merrill  <jason@redhat.com>

	PR c++/42373
	* g++.dg/cpp0x/lambda/lambda-mangle.C: Adjust regexps for darwin.

2009-12-15  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* ada/acats/norun.lst: Sort.

2009-12-15  Jakub Jelinek  <jakub@redhat.com>

	PR c++/41183
	* g++.dg/torture/pr41183.C: New test.

2009-12-15  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41235
	* auto_char_len_1.f90: New test.
	* auto_char_len_2.f90: New test.
	* auto_char_len_4.f90: Correct test.

2009-12-14  Jason Merrill  <jason@redhat.com>

	PR c++/42364
	* g++.dg/cpp0x/variadic31.C: Compile with -g.
	* g++.dg/ext/attrib33.C: Likewise.

2009-12-15  Shujing Zhao  <pearly.zhao@oracle.com>

	* g++.dg/other/error20.C: Adjust dg-message strings.
	* g++.dg/other/error31.C: Likewise.
	* g++.dg/rtti/typeid6.C: Likewise.
	* g++.dg/ext/ms-1.C: Likewise.
	* g++.dg/parse/error19.C: Likewise.
	* g++.dg/parse/crash5.C: Likewise.
	* g++.dg/cpp0x/explicit4.C: Likewise.
	* g++.dg/template/ptrmem4.C: Likewise.
	* g++.dg/template/crash37.C: Likewise.
	* g++.dg/template/qualttp5.C: Likewise.
	* g++.dg/template/local6.C: Likewise.
	* g++.dg/template/instantiate5.C: Likewise.
	* g++.old-deja/g++.brendan/overload1.C: Likewise.
	* g++.old-deja/g++.brendan/cvt3.C: Likewise.
	* g++.old-deja/g++.brendan/overload4.C: Likewise.
	* g++.old-deja/g++.jason/conversion11.C: Likewise.
	* g++.old-deja/g++.jason/scoping10.C: Likewise.
	* g++.old-deja/g++.other/expr1.C: Likewise.
	* g++.old-deja/g++.other/pmf3.C: Likewise.
	* g++.old-deja/g++.other/crash24.C: Likewise.
	* g++.old-deja/g++.niklas/t120.C: Likewise.
	* g++.old-deja/g++.niklas/t121.C: Likewise.
	* g++.old-deja/g++.law/operators9.C: Likewise.
	* g++.old-deja/g++.law/arm9.C: Likewise.
	* g++.old-deja/g++.law/enum4.C: Likewise.
	* g++.old-deja/g++.law/arg11.C: Likewise.
	* g++.old-deja/g++.benjamin/15800-1.C: Likewise.