@@ -1,3 +1,7 @@
+2009-12-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/debug/tls-1.c: New test.
+
 2009-12-15  Jason Merrill  <jason@redhat.com>
 
 	PR c++/42358
